add bunch of things - add halaman masuk - add halaman verifikasi otp - add library eksternal untuk otp - fixing some bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Nebeng">
         <activity
+            android:name=".OTPVerfActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false"
-            android:label="Home"/>
+            android:label="Home" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
