revisi halaman login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Nebeng">
         <activity
+            android:name=".inpHP"
+            android:exported="false" />
+        <activity
             android:name=".OTPVerfActivity"
             android:exported="false" />
         <activity
