--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,36 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Nebeng">
         <activity
+            android:name=".NawarProceed"
+            android:exported="false" />
+        <activity
+            android:name=".Nawar_M"
+            android:exported="false" />
+        <activity
+            android:name=".ProgresNebeng"
+            android:exported="false" />
+        <activity
+            android:name=".NebengProceed"
+            android:exported="false" />
+        <activity
+            android:name=".testing"
+            android:exported="false" />
+        <activity
+            android:name=".NebengM"
+            android:exported="false" />
+        <activity
+            android:name=".Nebeng"
+            android:exported="false"
+            android:label="@string/title_activity_nebeng"
+            android:theme="@style/Theme.Nebeng.NoActionBar" />
+        <activity
+            android:name=".Editprofil"
+            android:exported="false" />
+        <activity
+            android:name=".Beranda"
+            android:exported="false"
+            android:label="@string/title_activity_beranda" />
+        <activity
             android:name=".inpHP"
             android:exported="false" />
         <activity
