--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Nebeng">
+        android:theme="@style/Theme.Nebeng"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".inpHP"
-            android:exported="true" />
-        <activity
-            android:name=".OTPVerfActivity"
-            android:exported="true" />
+            android:name=".BerandaActivity"
+            android:exported="true"/>
         <activity
             android:name=".HomeActivity"
             android:exported="false"
@@ -27,7 +25,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
