--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Nebeng"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Dummy"
+            android:exported="false" />
+        <activity
             android:name=".NawarProceed"
             android:exported="false" />
         <activity
