--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Nebeng"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".NebengActivity"
+            android:exported="true"   />
+        <activity
             android:name=".NawarProceed"
             android:exported="false" />
         <activity
@@ -31,11 +34,11 @@
         <activity
             android:name=".NebengM"
             android:exported="false" />
-        <activity
-            android:name=".Nebeng"
-            android:exported="false"
-            android:label="@string/title_activity_nebeng"
-            android:theme="@style/Theme.Nebeng.NoActionBar" />
+<!--        <activity-->
+<!--            android:name=".Nebeng"-->
+<!--            android:exported="false"-->
+<!--            android:label="@string/title_activity_nebeng"-->
+<!--            android:theme="@style/Theme.Nebeng.NoActionBar" />-->
         <activity
             android:name=".Editprofil"
             android:exported="false" />
@@ -43,9 +46,9 @@
             android:name=".Beranda"
             android:exported="false"
             android:label="@string/title_activity_beranda" />
-        <activity
-            android:name=".inpHP"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".inpHP"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".HomeActivity"
             android:exported="false"
