Menambahkan Alert Maintenance | Progess Sistem Nawar 50% | Sistem Nebeng 50%

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name=".NawarProceed"
             android:exported="false" />
         <activity
-            android:name=".Nawar_M"
+            android:name=".NawarActivity"
             android:exported="false" />
         <activity
             android:name=".ProgresNebeng"
